--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Canadian poetry'
 - !lcsh 'Sonnets'
 - !lcc 'PS'
+- GITenberg
 title: Sonnets and Other Verse
 url: http://www.gutenberg.org/ebooks/37365
